tests/errors/switch_call_case.ki
var f = Function(): return 1
switch 1:
    case f():
        discard 0
